cluster/apps/networking/istio-system/istiod/app/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-all-to-istiod"
  namespace: istio-system
spec:
  endpointSelector:
    matchLabels:
      app: istiod
  ingress:
    - fromEntities:
        - cluster
        - host
        - kube-apiserver
      toPorts:
        - ports:
            - port: '15012'
              protocol: TCP
        - ports:
            - port: '443'
              protocol: TCP
